--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: build and deploy docker image
+name: 'build and deploy docker image'
 
 on:
   push:
     tags:
-      - '*'
+      - 'xxxx'  # Trigger เมื่อ push tag ใด ๆ
 
 jobs:
   release-docker-image-job:
@@ -18,19 +18,14 @@ jobs:
       - name: Extract tag name
         run: echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
-      - name: Set lowercase owner
-        run: echo "OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
-
-      - name: Verify values
-        run: |
-          echo "OWNER=kasuya95"
-          echo "TAG_NAME=${{ env.TAG_NAME }}"
+      - name: Verify extracted tag
+        run: echo "Using TAG_NAME=${{ env.TAG_NAME }}"
 
       - name: Build and push Docker image
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
-          image: vue-app
-          registry: ghcr.io/kasuya95
+          image: vue-app  
+          registry: ghcr.io/kasuya21
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          tags: ${{ env.TAG_NAME }},latest
+          tags: ${{ env.TAG_NAME }}, latest
